Adding Kubernetes ® symbol; minor trailing-slash fixes.

--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -588,4 +588,9 @@ ul.large-list{
     color: $color_talk-alt;
     font-style: italic;
 }
+sup {
+    font-size: 50%;
+    top: -0.8em;
+    margin-right: 0.05em;
+}
 
