--- a/source/contact/azure.html.slim
+++ b/source/contact/azure.html.slim
@@ -20,7 +20,7 @@ section.container-gray-2#top
         = partial "partials/head/header", :locals => { :style => "light" }
     .row.align-middle
         .columns.small-12.medium-8.xlarge-6.group.medium-order-2
-            h1.headline-3 Achieve continous compliance with <strong>Kubernetes on Azure.</strong>
+            h1.headline-3 Achieve continous compliance with <strong>Kubernetes<sup>&reg;</sup> on Azure.</strong>
 
 section.section-article--med.container-gray-11
     .row
