--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -25,7 +25,7 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
     section.section-article
       .row.align-middle
         .columns.small-12.medium-6.large-8
-          h1.headline-1 A security and compliance layer for Kubernetes.
+          h1.headline-1 A security and compliance layer for Kubernetes<sup>&reg;</sup>
           h2.headline-4 Datica manages the compliance of your favorite tools, technologies and Platforms.
           p.lead
             | The Datica Platform makes your cloud workloads compliant to the standards of HIPAA, HITRUST, GDPR, and GxP.
@@ -79,7 +79,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
