--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -37,7 +37,7 @@ section#compliance-top.container-color--dark-alt style=("background-color: #2327
         .columns.small-12.medium-6.large-4
           = inline_svg_art("source/assets/img/art/k8-continuous-compliance.svg", class: "svg-color--white")
           h3.headline-4 Datica solves your problem
-          p The Datica Platform allows development flexibility via Kubernetes while providing a prescriptive compliance and security layer on top.
+          p The Datica Platform allows development flexibility via Kubernetes<sup>&reg;</sup> while providing a prescriptive compliance and security layer on top.
           p.lead With Datica, any technology team can manage compliance on the cloud, giving organizations the assurances they need to adopt the benefits of the cloud.
       .menu.button-cluster.align-center
         = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo/", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
@@ -106,7 +106,7 @@ section#compliance-hitrust.section-article
       svg.icon-tone.icon-size--large
         use.solid xlink:href="#shield-half" 
       h3.headline-4 Compliance Artifact Storage
-      p Once your Kubernetes cluster is installed and configured, Datica will store compliance artifact data.
+      p Once your Kubernetes<sup>&reg;</sup> cluster is installed and configured, Datica will store compliance artifact data.
       ul
         li Our logging stack ties directly into the compliance artifact storage.
         li Certain compliance data must be relayed back to Datica’s centrally managed Cloud Compliance Management System for processing.
@@ -212,7 +212,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
