--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Platform for Compliance in the Cloud"
-summary: "Datica's Platform bridges security and compliance with Kubernetes to offer a complete, enterprise cloud native solution for regulated industries."
+summary: "Datica's Platform bridges security and compliance with Kubernetes<sup>&reg;</sup> to offer a complete, enterprise cloud native solution for regulated industries."
 navTitle: "Platform Overview"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
@@ -18,15 +18,15 @@ priority: "0.9"
   section#platform-top.section-article.position-relative(style="overflow: hidden;")
     .row
       .columns.small-12
-        h1.headline-1 Compliance + Kubernetes = Datica
+        h1.headline-1 Compliance + Kubernetes<sup>&reg;</sup> = Datica
     .row.group
       .columns.small-12.medium-8.large-6.xlarge-6
         p.lead= current_page.data.summary
 
         h2.headline-3 The Datica Cloud Compliance Management System (CCMS)
-        p The CCMS gives users visibility and control over the compliance of their Kubernetes cluster:
+        p The CCMS gives users visibility and control over the compliance of their Kubernetes<sup>&reg;</sup> cluster:
         ul.bullet-outside.bullets-chevron
-        li <strong>Initial State:</strong> Compliance in the cloud is built on a foundation of secure, logical configurations. Without a proper foundation, the proverbial compliance house fails. When Datica deploys a Kubernetes cluster, we do so with configuration automation and security best practices.
+        li <strong>Initial State:</strong> Compliance in the cloud is built on a foundation of secure, logical configurations. Without a proper foundation, the proverbial compliance house fails. When Datica deploys a Kubernetes<sup>&reg;</sup> cluster, we do so with configuration automation and security best practices.
         li <strong>Compliance Artifacts:</strong> Once the proper compliance state is in place, the next step to ensuring continuous compliance is collecting data as compliance artifacts. Datica’s compliance deployments (logging, monitoring, IDS, etc.) report and log compliance artifacts to an encrypted block storage object. The CCMS then uses this data to ensure continuous compliance.
         li <strong>Compliance Engine:</strong> The core value of the CCMS is that we are continuously ensuring the complete compliance of both your cluster, and the underlying infrastructure that it resides on. We do this by comparing the running state with the expected initial compliance state. The compliance engine checks state every 5 minutes.
         li <strong>Management:</strong> Datica manages the compliance state of your cluster through intrusion detection review and remediation; vulnerability scanning management, remediation and proaction; and compliance reporting for HITRUST, SOC 2, GDPR and more.
@@ -65,8 +65,8 @@ section#setup.section-article.container-gray-12
       .row.align-center
         .columns.small-12.medium-10.large-8.group.text-center
           h3.headline-5.spaced-out Leverage the power of Kubernetes
-          h2.headline-2 Compliant and HITRUST certified Kubernetes in 10 minutes
-          p.lead Datica automatically configures your underlying infrastructure, installs and configures a highly available Kubernetes cluster, and connects that cluster to Datica’s Cloud Compliance Management System — all in 10 minutes.
+          h2.headline-2 Compliant and HITRUST certified Kubernetes<sup>&reg;</sup> in 10 minutes
+          p.lead Datica automatically configures your underlying infrastructure, installs and configures a highly available Kubernetes<sup>&reg;</sup> cluster, and connects that cluster to Datica’s Cloud Compliance Management System — all in 10 minutes.
       .row.align-center.small-up-1.medium-up-2.large-up-4.group
         .column
           h4.headline-4.hide-for-medium 1. Setup
@@ -75,7 +75,7 @@ section#setup.section-article.container-gray-12
         .column
           h4.headline-4.hide-for-medium 2. Installation
           img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
-          p With the required information, Datica installs a new Kubernetes cluster into your account (or into Datica’s account, your choice).
+          p With the required information, Datica installs a new Kubernetes<sup>&reg;</sup> cluster into your account (or into Datica’s account, your choice).
         .column
           h4.headline-4.hide-for-medium 3. Verification
           img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/3MKy2SJ2dWUQIWy8yKEK4C/85c4531dfb35b5a9a6c008939ede8f74/setup-3.png?w=450" alt="Verification"
@@ -83,7 +83,7 @@ section#setup.section-article.container-gray-12
         .column
           h4.headline-4.hide-for-medium 4. Done!
           img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4GOXaSvKfu6SeaMmmw2k6i/241b016e86591f5b871a192c4583b48e/setup-4.png?w=450" alt="Done!"
-          p Start shipping! Your newly deployed Kubernetes cluster is ready for use. Scale and manage infrastructure at will. The Datica Compliance Management System has your back.
+          p Start shipping! Your newly deployed Kubernetes<sup>&reg;</sup> cluster is ready for use. Scale and manage infrastructure at will. The Datica Compliance Management System has your back.
       .row.align-center
         .columns.small-12.medium-8.large-5.xlarge-4
           .card.drop
@@ -136,7 +136,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
