--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -29,7 +29,7 @@ priority: "1.0"
               h4.headline-5 
                 = inline_svg("small/icon-ui-checkmark", class: "icon-inline icon-left svg-color--green") 
                 | Deployment Models
-              p We can deploy a Kubernetes cluster into your cloud account, or Datica's cloud. We give you the flexibility to decide how much, or how little you want to manage.
+              p We can deploy a Kubernetes<sup>&reg;</sup> cluster into your cloud account, or Datica's cloud. We give you the flexibility to decide how much, or how little you want to manage.
               h4.headline-5 
                 = inline_svg("small/icon-ui-checkmark", class: "icon-inline icon-left svg-color--green") 
                 | Support
