--- a/source/go/subscribe.html.erb
+++ b/source/go/subscribe.html.erb
@@ -34,35 +34,9 @@ layout: basic
         </div>
         <div class="masonry-group">
             <% sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse! %>
-            <% sorted_posts[0...7].each do | id, post | %>
+            <% sorted_posts[0...4].each do | id, post | %>
                 <aside class="masonry-group--item">
-                    <div class="card card--hover drop container-gray-12">
-                        <% if post.has_key?("featured_image") %>
-                            <a class="" href="/blog/<%= post["slug"] %>" title="Read this blog post">
-                                <img class="card-img" src="<%= post["featured_image"]["url"] %>?fit=thumb&w=400&h=200&q=55" alt="Image: <%= post["title"] %>" />
-                            </a>
-                        <% end %>
-                        <div class="card-section">
-
-                            <h3 class="headline-4">
-                                <a class="" href="/blog/<%= post["slug"] %>" title="Read this blog post"><%= post["title"] %></a>
-                            </h3>
-                            <% if post["author"].has_key?("profile_pic") %>
-                                <%= partial("partials/snippets/person-small", :locals => { :p => post["author"] }) %>
-                            <% end %>
-                            <% if post.has_key?("pub_date") %>
-                                <div class="text-tiny"><i class="fa fa-calendar" aria-hidden="true"></i> <%= post['pub_date'].strftime('%B %-d, %Y') %> &nbsp;</div>
-                            <% end %>
-                            <% if post.has_key?("summary") || post["summary"] == "" %>
-                                <p><%= post["summary"] %></p>
-                                <%#= Kramdown::Document.new(post["summary"]).to_html %>
-                            <% else %>
-                                <% if post.has_key?("blog_lead") %>
-                                    <%= Kramdown::Document.new(post["blog_lead"]).to_html %>
-                                <% end %>
-                            <% end %>
-                        </div>
-                    </div>
+                    <%= partial "partials/cards/featured-blog", :locals => { :post => post, :style => "light", :size => "small" } %>
                 </aside>
             <% end %>
         </div>
