--- a/source/platform/_technology.html.slim
+++ b/source/platform/_technology.html.slim
@@ -35,7 +35,7 @@ section#tech-top.section-article.container-color--dark-grad-blue.container-image
             .card-section
               p.lead.text-center <strong>Infrastructure Layer</strong>
               p AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
-              p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
+              p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes<sup>&reg;</sup> and proprietary technology to orchestrate all DevOps duties for customers.
         .columns.small-12.medium-12.large-4
           .card.drop.container-color--gray-light
             img src="https://images.ctfassets.net/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
@@ -152,7 +152,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.text-center
-        h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes is here.
+        h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-12.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
