--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -85,7 +85,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-6.text-right
         = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/compliance", :button_classes => "button hollow-inverted" }
