--- a/source/contentful_templates/press_release.html.erb
+++ b/source/contentful_templates/press_release.html.erb
@@ -55,19 +55,11 @@ end
             <% end %>
         </div>
         <div class="columns small-12 large-3">
-                <div class="media-object card-person">
-                    <div class="media-object-section">
-                        <img src="//images.ctfassets.net/189dvqdsjh46/FV6bMibcoS6KucswgSCec/9b32170214c6c1f3b0c967183c6ac9e6/prof-marcia.jpg" class="avatar avatar--medium circle" alt="Marcia Noyes">
-                    </div>
-                    <div class="media-object-section main-section align-self-middle">
-                        <h4 class="person-name">Marcia Noyes</h4>
-                        <p class="person-title"><a href="mailto:press@datica.com">press@datica.com</a></p>
-                    </div>
-                </div>
+                <%= partial("partials/snippets/person", :locals => { :p => data.site.person["5kC0Y798vm6ag8sCq0O2CQ"], :classes => "block-width-medium", :use_headers => false }) %>
                 <hr class="content"/>
                 <%= partial "partials/snippets/press-links" %>
                 <hr class="content"/>
-            <a href="/press#pressReleases" class="button button--primary" title="All Press Releases"><i class="fa fa-angle-left" aria-hidden="true"></i> All Press Releases</a>
+            <a href="/press/#pressReleases" class="button button--primary" title="All Press Releases"></i> All Press Releases</a>
         </div>
     </div>
 </section>
