--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -29,7 +29,7 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
           h2.headline-4 Datica manages the compliance of your favorite tools, technologies and Platforms.
           p.lead
             | The Datica Platform makes your cloud workloads compliant to the standards of HIPAA, HITRUST, GDPR, and GxP.
-          = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/platform", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/platform/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
 
         .columns.small-12.medium-6.large-4
           .card.container-color--light-shimmer
@@ -44,7 +44,7 @@ section.section-article
           - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
           .column
             img alt="#{logo["name"]}" class=logopad src="#{logo["fileUrl"]}" /
-      = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/platform/compliance", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/platform/compliance/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
@@ -82,6 +82,6 @@ aside#ctaBottom.container-color--dark-grad-blue
         h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-4.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing/", :button_classes => "button hollow-inverted" }
       .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black" }
+        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black" }
