--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -17,8 +17,8 @@ ruby:
     else
         current_page.data.author = "Datica, Inc."
     end
-    if p.has_key?("pub_date")
-        current_page.data.date = p['pub_date'].strftime('%B %-d, %Y')
+    if p.has_key?("event_date")
+        current_page.data.date = p['event_date'].strftime('%B %-d, %Y')
     else
         today = DateTime.now
         current_page.data.date = today.strftime('%B %-d, %Y')
@@ -41,16 +41,16 @@ ruby:
 section.container-gray-2#top
     .container-color--tint-20.faded-max.group
         = partial "partials/head/header", :locals => { :style => "light" }
-    .row.align-middle
-        .columns.small-12.medium-8.xlarge-6.group.medium-order-2
-            = partial "partials/snippets/button", :locals => { :label => "Get your free report", :url => "#report-form", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
+    .row.align-middle.align-center
+        .columns.small-12.medium-6.xlarge-6
+            /= partial "partials/snippets/button", :locals => { :label => "Get your free report", :url => "#report-form", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
             .headline-5.subhead--spaced.faded.show-for-large
-                = (p.has_key?("subhead") ? p.subhead : "Datica Innovation Reports")
+                = (p.has_key?("subhead") ? p.subhead : "Datica Webinars")
             h1.headline-3.text-strong
                 = p.title
         - if p.has_key?("image_thumb")
-            .columns.small-12.medium-4.xlarge-4.text-center.medium-order-1
-                img.text-center.product-thumb(data-interchange="[#{p.image_thumb.url}?w=400, small], [#{p.image_thumb.url}?w=500, medium]" alt="Datica Guide: #{p.title}")
+            .columns.small-12.medium-6.xlarge-6.text-center
+                img.video-preview(data-interchange="[#{p.image_thumb.url}?w=640, small], [#{p.image_thumb.url}?w=800, medium]" alt="Datica Guide: #{p.title}")
 section.section-article--med.container-gray-11
     .row
         .columns.small-12.medium-large-6.xlarge-6.group--2x
@@ -61,15 +61,15 @@ section.section-article--med.container-gray-11
                 article.group.content-dynamic
                     = Kramdown::Document.new(p["desc"]).to_html
             - if p.has_key?("authors")
-                ruby:
-                    author_hed=(p["authors"].count > 1 ? 'With expert authors' : 'With Datica Expert')
+                / ruby:
+                    author_hed=(p["authors"].count > 1 ? 'Presented by' : 'With Datica Expert')
                 aside.group
-                    .subhead--spaced.faded.headline-5.group--sm= author_hed
+                    .subhead--spaced.faded.headline-5.group--sm Presented by
                     - p["authors"].each do | author |
                         p
                             = partial("partials/snippets/person", :locals => { :p => author })
         #report-form.columns.small-12.medium-large-6.xlarge-4
-            .callout.drop.form-embed
+            .callout.drop
                 - if p.has_key?("related_form")
                     h3.headline-4.text-center.group Get Your #{p.related_form.title}
                     = Kramdown::Document.new(p["related_form"]["custom_form"]).to_html
