--- a/source/partials/cards/_featured-blog.erb
+++ b/source/partials/cards/_featured-blog.erb
@@ -63,20 +63,20 @@ card_summary = truncate_words(strip_tags(entry_summary), :length => 45)
 %>
 <%# Renders a card inside a post loop. Post var must be injected - AW %>
 <div class="card <%= style_classes %> <%= fit_classes %>">
-    <% if image_url != nil %><a class="container-image-fill card-header-image container-gray-3" href="<%= related_post_path %>/" title="Read '<%= post["title"] %>'" data-interchange="[<%= image_url %>?fit=thumb&w=600&h=300&q=45, small], [<%= image_url %>?fit=thumb&w=800&h=400, medium]">
+    <% if image_url != nil %><a class="container-image-fill card-header-image container-gray-3" href="<%= related_post_path %>" title="Read '<%= post["title"] %>'" data-interchange="[<%= image_url %>?fit=thumb&w=600&h=300&q=45, small], [<%= image_url %>?fit=thumb&w=800&h=400, medium]">
         <% if content_type != nil %><span class="card-header-subhead"><%= content_type %></span><% end %>
         <h2 class="headline-5 card-header-title ribbon--gray-1"><%= post["title"] %></h2>
         <%= inline_svg("icon-arrow-right-circle-large", class: "icon-size--xlarge card-header-icon svg-color--white") %>
     </a><% end %>
 
-    <% if url_segment == "innovation" %><a class="container-image-fill card-header-image card-header-image--compact container-gray-3" href="<%= related_post_path %>/" title="Read '<%= post["title"] %>/'" data-interchange="[/public/img/art/art-sound-bars-purple.svg, small]">
+    <% if url_segment == "innovation" %><a class="container-image-fill card-header-image card-header-image--compact container-gray-3" href="<%= related_post_path %>" title="Read '<%= post["title"] %>/'" data-interchange="[/public/img/art/art-sound-bars-purple.svg, small]">
         <span class="card-header-subhead">Healthcare Innovators Podcast</span>
         <h2 class="card-header-title headline-5 ribbon--gray-1"><%= post["title"] %></h2>
         <%= inline_svg("icon-video-play-circle", class: "icon-size--xlarge card-header-icon svg-color--white") %>
     </a><% end %>
     
     <% if post._meta.content_type_id == "academy" %>
-        <a class="container-image--center card-header-image card-header-image--compact section--cta-blue" href="<%= related_post_path %>/" title="Read '<%= post["title"] %>/'" data-interchange="[//images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop?fit=thumb&w=400&h=100, medium]">
+        <a class="container-image--center card-header-image card-header-image--compact section--cta-blue" href="<%= related_post_path %>" title="Read '<%= post["title"] %>'" data-interchange="[//images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop?fit=thumb&w=400&h=100, medium]">
         <span class="card-header-subhead">Datica HIPAA Academy</span>
         <h2 class="card-header-title headline-5 ribbon--white link--dark"><%= post["title"] %></h2>
         <%= inline_svg("icon-hitrust", class: "icon-size--xlarge card-header-icon svg-color--white") %>
@@ -85,7 +85,7 @@ card_summary = truncate_words(strip_tags(entry_summary), :length => 45)
 
     <div class="card-section">
         <% if url_segment != "innovation" && url_segment != "academy" && image_url == nil %>
-            <a class="" href="<%= related_post_path %>/" title="Read '<%= post["title"] %>'"><h3 class="headline-5"><%= post["title"] %></h3></a>
+            <a class="" href="<%= related_post_path %>" title="Read '<%= post["title"] %>'"><h3 class="headline-5"><%= post["title"] %></h3></a>
         <% end %>
         <% if post.has_key?("guest") %>
             <div class="media-object card-person">
