--- a/source/partials/scripts/_google-tm-head.erb
+++ b/source/partials/scripts/_google-tm-head.erb
@@ -1,4 +1,5 @@
-<%# Google Tag Manager, GA Optimize %>
+<!-- Hiding this GTM snippet, to see if Netlify can inject the dataLayer. -->
+<%# Google Tag Manager, GA Optimize 
 <script>
     dataLayer = [{
         currentBranch: '{{ BRANCH }}'
@@ -9,7 +10,7 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-MVXG5LZ');
 </script>
-
+%>
 <%# Google Tag Manager, GA Optimize
 <script>
     (function(w, d, s, l, i) {
