Tickling netlify's build

--- a/source/partials/scripts/_google-tm-head.erb
+++ b/source/partials/scripts/_google-tm-head.erb
@@ -1,4 +1,4 @@
-<!-- Hiding this GTM snippet, to see if Netlify can inject the dataLayer. -->
+<!-- Hiding this GTM snippet, to see if Netlify can inject the dataLayer. Injected before end of /head, may not be high enough. -->
 <%# Google Tag Manager, GA Optimize 
 <script>
     dataLayer = [{
