Hiding latest ribbon

--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -5,7 +5,8 @@
 /   .column.small-2.medium-4.container-image-fill(style="background-image: url('https://images.ctfassets.net/189dvqdsjh46/1X6QRrY9gYumsoIIsM6QSO/3563e2855131830d7a0622747044a934/build-18-bg-bright.svg');")
 /     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
 /       span aria-hidden="true" &times;
-aside id="alertTop" style="background-color: #373D50;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
+
+/ aside id="alertTop" style="background-color: #373D50;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
   a.dismiss(href="https://content.datica.com/k8s-hitrust-2018-06-20" title="Webinar: HITRUST + Kubernetes<sup>&reg;</sup> - June 20, 1pm - Register today!")
     img data-interchange="[https://images.ctfassets.net/189dvqdsjh46/q5Q9qWFMWsAe8AegsakQw/568bf51e8f15cf22f84d5f5a849692dc/webinar-k8-2-promo-banner.png?w=960, small], [https://images.ctfassets.net/189dvqdsjh46/4VhkDIZs8geUeG8MAYaW8A/e76c87b588e5f9c2c52c20559c194c7d/webinar-k8-2-promo-ribbon.png, medium]" alt="Webinar: HITRUST + Kubernetes<sup>&reg;</sup> - June 20, 1pm" /
   .row.align-center
