--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -16,7 +16,7 @@ ruby:
     section#top
         / .faded-max.group
         = partial "partials/head/header", :locals => { :style => "dark" }
-    section.section-article--small
+    section.section-article--med
         .row.align-center
             .columns.small-12.large-6.text-center.group
                 = inline_svg("icon-book-academy", class: "icon-size--medium")
@@ -31,25 +31,24 @@ ruby:
             - else thumb = nil
             .row.align-center
                 - unless thumb == nil
-                    .columns.small-12.medium-6.large-6
+                    .columns.small-12.medium-8.large-6
                         a.preview.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}?fit=scale&w=860, small]"
                             div.preview-subhead Datica Webinar
-                            h2.headline-3.preview-title = webinar_entry["title"]
+                            .preview-title
+                                h2.headline-3 = webinar_entry["title"]
+                            .menu.simple
+                                li
+                                    = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                                    span = webinar_entry['event_date'].strftime('%B %-d, %Y')
+                                - if webinar_entry.has_key?("discovery_topic")
+                                    li
+                                        span.label.info.round = data.site.discover[webinar_entry.discovery_topic.id].title
+
                             .preview-cta.headline-5.spaced-out Register now
                             = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
 
                             / img.thumbnail.float-left(src="#{thumb}?fit=scale&w=640" alt="webinar Preview")
-                .columns.small-12.medium-6.large-6
-                    .h3.headline-3
-                        a(href="/webinars/#{webinar_entry["slug"]}" title="View webinar") = webinar_entry["title"]
-                    .menu.simple.margin-bottom-small
-                        li
-                            = inline_svg("small/icon-event-note", class: "icon-inline icon-left svg-color--gray-5")
-                            span = webinar_entry['event_date'].strftime('%B %-d, %Y')
-                        - if webinar_entry.has_key?("discovery_topic")
-                            li
-                                span.label.info.round = data.site.discover[webinar_entry.discovery_topic.id].title
-
+                .columns.small-12.medium-4.large-6
                     .lead
                         = Kramdown::Document.new(webinar_entry["summary"]).to_html
                     - if webinar_entry.has_key?("authors")
